# zamaz-debate-mcp

./: .cz.json  .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .shellcheckrc  .sonarqube-report.env.example  .trufflehog.yaml  AGENTIC_FLOWS_INTEGRATION_SUMMARY.md  API-SECURITY-GUIDE.md  API_TEST_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_MULTI_TENANT.md  BEST_PRACTICES_REPORT.md  BREAKING_CHANGES_MIGRATION_PLAN.md  CACHE_OPTIMIZATION_SUMMARY.md  CI_CD_FIXES_SUMMARY.md  CI_CD_IMPROVEMENT_PLAN.md  CLAUDE.md  CLAUDE_LINTING_INTEGRATION_PLAN.md  CLAUDE_LINT_IMPLEMENTATION_COMPLETE.md  CLAUDE_LINT_USAGE.md  COMMIT_MESSAGE.md  COMPLETION_SUMMARY.md  COMPREHENSIVE-SECURITY-SUMMARY.md  COMPREHENSIVE_SONARQUBE_FIXES_REPORT.md  CONFIGURATION_OPTIMIZATION_SUMMARY.md  DEBATE-ENHANCEMENTS.md  DEBATE_CURL_EXAMPLES.md  DOCUMENTATION-REORGANIZATION.md  E2E_TEST_EVIDENCE_REPORT.md  E2E_TEST_EVIDENCE_SUMMARY.md  ENV_SETUP.md  EXECUTIVE_LINTING_MODERNIZATION_SUMMARY.md  FINAL-SECURITY-IMPLEMENTATION-SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SONARQUBE_COMPLETE_RESOLUTION_REPORT.md  (+202 more)
.githooks/: pre-commit
.github/: DEPRECATED_ACTIONS_UPDATE.md  WORKFLOW_FIXES_SUMMARY.md  __init__.py  copilot-instructions.md  gitleaks.toml  security-policy.yml  test-mapping.yml  test-security-workflow.sh  zap-rules.tsv
.linting/: global.yml
.sonarlint/: connectedMode.json
claude-docs/: README.md
config/: nginx-perf.conf  postgres-perf.conf  redis-perf.conf
config-repo/: .gitignore  README.md  application-dev.yml  application-prod.yml  application-staging.yml  application.yml  diff-environments.sh  encrypt-value.sh  github-integration-development.yml  github-integration-production.yml  github-integration-staging.yml  install-hooks.sh  mcp-auth-server-development.yml  mcp-auth-server-production.yml  mcp-auth-server-staging.yml  mcp-context-client-development.yml  mcp-context-client-production.yml  mcp-context-client-staging.yml  mcp-context-client.yml  mcp-context-development.yml  mcp-context-production.yml  mcp-context-staging.yml  mcp-context.yml  mcp-controller-development.yml  mcp-controller-production.yml  mcp-controller-staging.yml  mcp-controller.yml  mcp-debate-development.yml  mcp-debate-engine-development.yml  mcp-debate-engine-production.yml  mcp-debate-engine-staging.yml  mcp-debate-engine.yml  mcp-debate-production.yml  mcp-debate-staging.yml  mcp-debate.yml  mcp-docs-development.yml  mcp-docs-production.yml  mcp-docs-staging.yml  mcp-docs.yml  mcp-gateway-development.yml  (+31 more)
data/: debates.db
debate-ui/: .env.example  .eslintrc.js  .eslintrc.react-imports.js  .eslintrc.security.js  .gitignore  CLAUDE.md  COMPREHENSIVE_TESTING_PLAN.md  CSS-TROUBLESHOOTING.md  DEBATE-FIX-PLAN.md  Dockerfile  E2E_TEST_RESULTS.md  FINAL-UI-TEST-REPORT.md  GEMINI.md  LLM_PRESETS_LOCATION_GUIDE.md  Makefile  PLAYWRIGHT_TEST_REPORT.md  README.md  REAL_DEBATE_INTEGRATION_SUMMARY.md  SECURITY.md  SONARQUBE-FIXES.md  TESTING_PLAN.md  UI-ANALYSIS.md  UI-TEST-REPORT.md  UI_DEVELOPMENT_GUIDE.md  UI_MODERNIZATION_PLAN.md  UI_VALIDATION_PLAN.md  browser-ui-test.js  capture-admin-llm-presets.js  capture-llm-presets-correct.js  capture-screenshots.js  capture-ui-improvements.js  check-browser-errors.js  check-console-errors.js  check-ui-errors.js  check-ui-puppet.js  comprehensive-ui-test.js  debug-navigation.js  debug-react-render.js  debug-ui-test.js  debug-ui.html  (+48 more)
docker/: loki-config.yaml  otel-collector-config.yaml  promtail-config.yaml
docs/: API-GATEWAY-ROUTING.md  API_VERSIONING.md  README.md  (+38 more)
(+2918 files in other folders)
